<resources>
    <string name="app_name">vis.it</string>
    <string name="visitcompass2">logo</string>
    <string name="logo_description">vis.it logo</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings related to login -->
    <string name="prompt_email">E-mail</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="welcome">"Welcome!"</string>
    <string name="login_failed">"Login failed"</string>

    <!-- Strings related to registration -->
    <string name="name">First name</string>
    <string name="surname">Last name</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="register">Not a member? Sign up now!</string>
    <string name="sign_up">Sign up</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>

    <!-- Strings related to account information -->
    <string name="change_password">Change password</string>
    <string name="update">Update</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="full_name">Full Name</string>
    <string name="profile_image_description">Profile image</string>
    <string name="change_your_password">CHANGE YOUR PASSWORD</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="my_trips">my trips</string>


    <!-- Strings related to navigation drawer -->
    <string name="navigation_explore">Explore</string>
    <string name="navigation_add_plan">Add a new plan</string>
    <string name="navigation_travelling">On the go</string>
    <string name="navigation_on_location">On location</string>
    <string name="navigation_settings">Settings</string>
    <string name="navigation_share_contact">Share and contact…</string>
    <string name="navigation_share">Share</string>
    <string name="navigation_contact">Contact support</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_my_visit">My vis.it</string>
    <string name="info_vis_it">info@vis.it</string>

    <!-- Strings related to trip planner -->
    <string name="trip_planner_title">PLAN YOUR TRIP</string>
    <string name="trip_planner_country">Country:</string>
    <string name="trip_planner_city">City:</string>
    <string name="trip_planner_location">Accommodation link or location:</string>
    <string name="trip_planner_travelling_mode">Travelling mode:</string>
    <string name="trip_planner_date">Date of departure:</string>
    <string name="trip_planner_things">Things not to forget:</string>
    <string name="trip_planner_participants">Participants:</string>
    <string name="trip_planner_save_trip">save trip</string>
    <string name="trip_planner_country_button">Choose country</string>
    <string name="trip_planner_city_button">Choose city</string>
    <string name="trip_planner_location_button">Add accommodation link or accommodation address</string>
    <string name="trip_planner_travelling_mode_button">Choose travelling mode</string>
    <string name="trip_planner_date_button">Choose date of departure</string>
    <string name="trip_planner_things_button">Add things to the list</string>
    <string name="trip_planner_participants_button">Add participants</string>

    <!-- Strings related to fragments inside trip planner -->
    <string name="pick_country_title">PICK DESTINATION COUNTRY</string>
    <string name="pick_city_title">PICK DESTINATION CITY</string>
    <string name="accommodation_title">ACCOMMODATION</string>
    <string name="date_title">DATE OF DEPARTURE</string>
    <string name="travelling_necessities_title">TRAVELLING NECESSITIES (optional)</string>
    <string name="travelling_necessities_text">Travelling necessities</string>
    <string name="participants_title">ADD PARTICIPANTS (optional)</string>
    <string name="mode_title">TRAVELLING MODE</string>
    <string name="mode">Travelling mode</string>
    <string name="mode_text">Bus, car, airplane…</string>
    <string name="city_text">Destination city…</string>
    <string name="city">City</string>
    <string name="accommodation">Accommodation</string>
    <string name="travelling_necessities_list">List all travelling necessities you should not forget on this trip!</string>
    <string name="link_accommodation">Link/address of accommodation</string>
    <string name="link_friends">Invite friends!</string>
    <string name="participants_text">Add participants</string>
    <string name="button_save">SAVE CHANGES</string>
    <string name="continue_exploring">Still not sure where to go? Continue exploring…</string>
    <string name="continue_exploring_date">Still not sure when to go? Continue exploring…</string>
    <string name="next_button">Next</string>
    <string name="cancel_button">Cancel</string>
    <string name="on_destination">On destination!</string>
    <string name="on_the_go">On the go…</string>

    <string name="loading_location">Loading location…</string>
    <string name="loading">Loading…</string>

    <!-- Strings related to fragments inside travelling screen -->
    <string name="music_title">Music</string>
    <string name="weather_title">Weather</string>
    <string name="time_title">Time</string>
    <string name="next_song">Next song</string>

    <string name="home_time">Time at home</string>
    <string name="local_time">Time at current location</string>
    <string name="destination_time">Time at destination</string>

    <!-- Strings related to my trips fragment and row for recycler view -->
    <string name="my_trips_title">MY TRIPS</string>
    <string name="trip_details">View details</string>

    <!-- String related to trip details fragment -->
    <string name="trip_details_title">CHOSEN TRIP</string>
    <string name="trip_details_country">Country:</string>
    <string name="trip_details_city">City:</string>
    <string name="trip_details_date">Date:</string>
    <string name="trip_details_location">Location:</string>
    <string name="trip_details_necessities">Necessities:</string>
    <string name="trip_details_travelling_mode">Travelling mode:</string>
    <string name="trip_details_participants">Participants:</string>
    <string name="trip_details_start_trip">start trip</string>
    <string name="trip_details_return_button">return to trips preview</string>
    <string name="temperatureLabel">Temperature</string>
    <string name="pressureLabel">Pressure</string>
    <string name="windSpeedLabel">Wind speed</string>
    <string name="windDirectionLabel">Wind direction</string>
    <string name="descriptionLabel">Loading description…</string>
    <string name="wip">This feature is still WIP.</string>
    <string name="click_me">Click me</string>

    <!-- String related to explore fragment -->
    <string name="explore_title">Adventure awaits…</string>
    <string name="vertical_recycler_view_button_text">More…</string>
    <string name="vertical_recycler_view_title_placeholder">Title</string>
    <string name="horizontal_recycler_view_title_placeholder">Title</string>
    <string name="countryCategoryTitle">Interesting countries to explore</string>
    <string name="countryCategorySubtitle">Discover the beauty of different cultures and places</string>
    <string name="cityCategoryTitle">Explore vibrant new places</string>
    <string name="cityCategorySubtitle">Worlds most interesting cities</string>
    <string name="summerCategoryTitle">Smell the sea and feel the sky</string>
    <string name="summerCategorySubtitle">Best summer vacation spots</string>
    <string name="winterCategoryTitle">The joys of winter</string>
    <string name="winterCategorySubtitle">Enjoy these popular winter vacation spots</string>
    <string name="bigmac_result_text">Purchasing power of $100 dollars in your home country VS abroad based on the Big Mac Index.</string>
</resources>