<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_explore"
            android:icon="@drawable/ic_explore"
            android:title="@string/navigation_explore" />
        <item
            android:id="@+id/nav_add_plan"
            android:icon="@drawable/ic_add_plan"
            android:title="@string/navigation_add_plan" />
        <item
            android:id="@+id/nav_travelling"
            android:icon="@drawable/ic_travelling"
            android:title="@string/navigation_travelling" />
        <item
            android:id="@+id/nav_on_location"
            android:icon="@drawable/ic_on_location"
            android:title="@string/navigation_on_location" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/navigation_settings" />
    </group>

    <item android:title="@string/navigation_share_contact">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/navigation_share" />
            <item
                android:id="@+id/nav_contact_support"
                android:icon="@drawable/ic_contact_support"
                android:title="@string/navigation_contact" />
        </menu>
    </item>
</menu>